# CustomBoilerplateCristian

./: .gitignore  Cargo.toml  README.md
contracts/default-contract/: Cargo.toml
contracts/default-contract/examples/: schema.rs
contracts/default-contract/src/: contract.rs  error.rs  execute.rs  helpers.rs  msg.rs  query.rs  state.rs
