[workspace]
members = ["packages/*", "contracts/*"] 
exclude = [] # in case we have to exclude something later

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
panic = 'abort'
incremental = false

[workspace.dependencies]
cosmwasm-std = { version = "1.1.0" }
cosmwasm-schema = { version = "1.1.0" }
cw-utils = "0.16.0"
cw2 = { path = "../../packages/cw2", version = "1.0.0" }
cw20 = { path = "../../packages/cw20", version = "1.0.0" }
cw-storage-plus = "0.16.0"
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
